CalendarAdaptarTests